web/src/style/client.less
/*
#### This file contains styling for all client elements that are only on the client bundle.
*/

@import 'common';

// Import leaflet css
@import (inline) '../../../dist/leaflet.css';

a {
  text-decoration: none;
  color: white;

  &:hover {
    text-decoration: underline;
  }

  // &:visited {
  //   color: darken(@purp, 40%);
  // }
}

@import 'OverlayWindow';
@import 'Card';
@import 'asset-library/NewAssetOptions';
@import 'asset-library/AssetCard';
@import 'asset-library/AssetBrowser';
@import 'TopBar';
@import 'WebTopBar';
@import 'WebMenu';
@import 'SortingOptions';
@import 'FeatureSpawnList';
@import 'NearbyPlayers';
@import 'map.less';
@import 'navigations/MobileButtons';
@import 'overlays/ParcelInspectorTab';
@import 'overlays/WelcomeShortcuts';
@import 'overlays/nftNotification';
@import 'overlays/viewNFTOverlay';
@import 'overlays/AvatarUi';
@import 'overlays/NFTImageUI';
@import 'BuildTab';
@import 'SnapshotItem';

@font-face {
  font-family: 'source code pro';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src:
    local('Source Code Pro'),
    url(/fonts/sourcecodepro-regular.woff) format('woff');
}

@font-face {
  font-family: 'Press Start 2P';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src:
    local('Press Start 2P'),
    url(/fonts/pressstart2p-400.woff2) format('woff2');
}

::-webkit-scrollbar {
  width: 12px;
}

/* Scrollbar thumb */
::-webkit-scrollbar-thumb {
  background: #999;
  border-radius: 6px;
}

/* Scrollbar track background */
::-webkit-scrollbar-track {
  background: #444;
  margin-top: 1rem;
  margin-bottom: 1rem;
  border-radius: 6px;
}

// Size of hexagon buttons
@hexsize: 3.2rem;
@moderator: #7684ff;
@builder: #ffef76;

/* Overlay Window */
@overlayWindowBackground: #181511;
@overlayWindowBorderColor: #090807;
@overlayWindowTextColor: #f5f5f0;
@overlayWindowInputColor: #f5f5f0; // input boxes have dark backgrounds due to color-scheme:dark

:root {
  color-scheme: dark;
}

a {
  text-decoration: none;
}

/* canvas render */
canvas#renderCanvas {
  margin: 0;
  padding: 0;
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  outline: none !important;
  width: 100vw;
  height: 100vh;

  &:hover {
    &::after {
      content: '';
    }
  }
}

.no-touch {
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  touch-action: none;
}

body {
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  touch-action: none;
  font-family: 'source code pro', monospace;
  font-size: 15px;

  #babylonUnmuteIconBtn {
    left: 60px !important;
  }
}

.WebTopBar {
  position: absolute;
  top: 8px;
  right: 8px;
}

/* Animations Emote*/
.animations {
  font-size: 15px;
  display: flex;
  flex-wrap: wrap;
}

.animations li {
  list-style: none;
  margin: 0;
  padding: 16px;
  width: 64px;
}

.animations li:hover {
  cursor: pointer;
}

p,
li,
ul,
section,
h1,
h2,
h3,
h4 {
  margin: 0;
  padding: 0;
}

/* Mobile dpad*/
.mobile-dpad {
  position: absolute;
  bottom: 64px;
  left: 0;
  height: 150px;
  width: 150px;
  padding: 0;
  border: 30px solid transparent;
  touch-action: none;
  display: flex;
  z-index: 2000;
}

/* Chat unread */
.unread {
  position: absolute;
  bottom: 10px;
  left: 10px;

  font-size: 0.8em;
  padding: 8px;
  text-shadow: 1px 1px 1px black;

  border-radius: 4px;
}

main.chat {
  position: fixed;
  bottom: 0;
  left: 0;
  margin: 0 0 4px 0;
  padding: 4px;
  overflow-y: auto;
  max-height: 30vh;
  display: flex;
  flex-direction: column;

  .chat-messages {
    flex: 1;
    display: flex;
    flex-direction: column;
    gap: 2px;
    margin-bottom: 2px;
  }

  p {
    margin: 0 0.6rem;
    span {
      padding: 2px 0.4rem;
      text-shadow: 1px 1px 1px black;
      background: #0005;
      border-radius: 2px;
    }
  }

  form {
    padding: 0 0.5rem;
    display: flex;
    flex-direction: row;
    gap: 0.5rem;

    button,
    input {
      padding: 0.3rem;
    }
  }
}

.AnimateList {
  margin: 5px 0;
  background: var(--tinge);
  border-radius: 5px;

  ul {
    margin: 0;
    padding: 10px;
    list-style: none;

    display: grid;
    grid-template-columns: 1fr 1fr 1fr;

    li {
      list-style: none;
      flex-wrap: wrap;
      margin: 0;
      padding: 10px 0;
      cursor: pointer;
      text-align: center;
      border-radius: 5px;
      display: inline-block;
      width: 100%;

      > i {
        margin-right: 5px;
      }

      &.-active {
        background-color: #2f0e4c42;
      }

      &:hover {
        background: #333a;
        border-radius: 2px;
      }
    }
  }
}

.EmoteList {
  font-size: 32px;

  ul {
    display: flex;
    list-style: none;
    flex-wrap: wrap;
    margin: 0;
    padding: 10px;
    justify-content: space-between;

    li {
      margin: 0;
      padding: 5px;
      width: 40px;
      cursor: pointer;
      text-align: center;
    }

    li:hover {
      background: #333a;
      border-radius: 2px;
    }
  }
}

/* Overlay in-world */
.overlay {
  h3,
  p {
    margin-bottom: 10px;
  }

  .button {
    font: inherit;
    padding: 8px 16px;
    display: inline-block;
    border: 1px solid #555;
    color: #444;
    background: linear-gradient(#f3f3f3, #fafafa);
    font-weight: bold;
  }

  .button.enabled:hover {
  }

  .close {
    display: none;
    // hiding close to see if the UI works better without it
  }

  .columns {
    display: flex;
    flex-direction: row;

    .left-column {
      flex: 1;
      position: relative;
    }

    .right-column {
      width: 280px;
    }
  }
}

/*  Overlay in-world Spawn here (outdated) */
.overlay.spawn-here {
  width: 240px;
  box-sizing: border-box;
}
/* ... */

